--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,32 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+
+    <style name="MainMyToolbarStyle" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/md_white_1000</item>
+        <item name="actionMenuTextColor">@color/md_white_1000</item>
+        <item name="android:textColorPrimary">@color/md_white_1000</item>
+        <item name="android:textSize">22sp</item>
+        <item name="buttonGravity">center_vertical</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:titleTextColor" tools:targetApi="m">@color/md_white_1000</item>
+        <item name="android:colorControlNormal">@color/md_white_1000</item>
+        <item name="android:textColorSecondary">@color/md_white_1000</item>
+    </style>
+
+
+    <style name="MyToolbarStyle" parent="Theme.AppCompat.Light">
+        <item name="buttonGravity">center_vertical</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:titleTextColor" tools:targetApi="m">@color/md_white_1000</item>
+        <item name="android:colorControlNormal">@color/md_white_1000</item>
+        <item name="android:textColorSecondary">@color/md_white_1000</item>
     </style>
 
 </resources>
